# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  generate_diff.py  parse.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: test_json_12.txt  test_json_34.txt
